[package]
name = "pigeon"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
json = ["binrw", "dep:serde_json", "serde"]
binrw = ["dep:binrw"]

[dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"

serde = { version = "1.0.210", optional = true }
serde_json = { version = "1.0.128", optional = true }
binrw = { version = "0.14.0", optional = true }